--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,14 @@
 server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:3306/psih?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:sqlite:C://Users//danie//IdeaProjects//psihoBackend//identifier.sqlite
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=licentapracticaadm@zohomail.eu
-spring.mail.password=adakarqczbmfcrrl
+spring.mail.username=psiho.remainders@gmail.com
+spring.mail.password=bjnlorkxxsxewgqo
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
