changed functions for progress and results GET & PUT  in userController

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
-spring.datasource.url=jdbc:sqlite:C://Users//danie//IdeaProjects//psihoBackend//identifier.sqlite
+spring.datasource.url=jdbc:sqlite:identifier.sqlite
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
@@ -12,3 +12,5 @@ spring.mail.username=psiho.remainders@gmail.com
 spring.mail.password=bjnlorkxxsxewgqo
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+
